# supplier-intelligence-platform

./: .dockerignore  .env.example  .env.template  .gitignore  Dockerfile  api_server.py  chat_service.py  config.py  create_logger.py  deploy_all.sh  docker-compose.yml  main_prompts.py  memory.py  pyproject.toml  readme.md  requirements.txt
a2a_server/: guide_server.py  ticket_server.py  trip_server.py  weather_server.py
data/: init_milvus.py  init_mysql.sql
graph/: __init__.py  graph_builder.py  nodes.py  prompts.py  state.py
mcp_server/: base_mcp_server.py  mcp_guide_server.py  mcp_ticket_server.py  mcp_trip_server.py  mcp_weather_server.py
rag/: __init__.py  reranker.py
static/: index.html
tests/: test_agent_servers.py  test_mcp_servers.py
utils/: daily_budget.py  metrics.py  security.py
