[project]
name = "smart-travel-assistant"
version = "2.0.0"
description = "智能旅行助手 - 基于LangGraph+A2A+MCP的多智能体协同旅行服务平台"
requires-python = ">=3.12"
dependencies = [
    "colorlog==6.10.1",
    "fastapi==0.121.1",
    "fastmcp>=3.2.4",
    "FlagEmbedding>=1.3.0",
    "langchain==0.3.27",
    "langchain-community==0.3.31",
    "langchain-core==0.3.79",
    "langchain-mcp-adapters==0.1.13",
    "langchain-openai==0.3.35",
    "langchain-text-splitters==0.3.11",
    "langgraph==1.0.1",
    "langsmith>=0.1.0",
    "mysql-connector-python==9.5.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.21.0",
    "pymilvus>=2.6.12",
    "redis>=5.0.0",
    "python-a2a==0.5.4",
    "pytz>=2026.1.post1",
    "schedule==1.2.2",
]
